# VulkanEngine

./: .gitignore  .gitmodules  CMakeLists.txt  GwatatoEngine.sln  README.md  VulkanVideos.sln
VulkanVideos/: BillboardRS.cpp  BillboardRS.h  BillboardSystem.cpp  BillboardSystem.h  Buffer.hpp  Camera.cpp  Camera.h  DeferredRenderer.cpp  DeferredRenderer.hpp  Descriptor.hpp  Device.cpp  ForwardRenderer.cpp  ForwardRenderer.hpp  GameObject.cpp  GameObject.hpp  GeometryRS.cpp  GuiManager.cpp  GuiManager.h  KeyboardController.hpp  LighningRS.h  Light.h  LightManager.cpp  LightManager.h  LightSystem.cpp  LightSystem.h  LightingPassDeferred.cpp  LightingPassDeferred.h  LightingStage.cpp  Material.cpp  Material.h  MaterialManager.cpp  MaterialManager.h  MaterialSystem.cpp  MaterialSystem.h  PointLight.cpp  PointLight.h  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.hpp  (+57 more)
VulkanVideos/Debug/: vc142.idb
VulkanVideos/Engine/: main.cpp
VulkanVideos/Vulkan/: Buffer.cpp  Descriptor.cpp  Device.hpp  SwapChain.hpp
VulkanVideos/shaders/: LightningPassDeffered.frag  LightningPassDeffered.frag.spv  LightningPassDeffered.vert  LightningPassDeffered.vert.spv  billboard.frag  billboard.vert  gBuffer.frag  gBuffer.frag.spv  gBuffer.vert  gBuffer.vert.spv  gBufferfrag.spv  point_light.frag.spv  point_light.vert.spv  simple_shader.frag  simple_shader.frag.spv  simple_shader.vert  simple_shader.vert.spv
VulkanVideos/vsFile/: VulkanVideos.vcxproj  VulkanVideos.vcxproj.filters
glsl VulkanVideos/shaders/: LightningPassDeffered.frag
renderDoc/: settings.cap
src/: GwatatoEngine.filters  GwatatoEngine.vcxproj
src/Engine/: main.cpp
src/Utils/: compile_shader.bat
src/Vulkan/: Buffer.cpp  Buffer.hpp  Descriptor.cpp  Descriptor.hpp  Device.cpp  Device.hpp  Pipeline.cpp  Pipeline.hpp  SwapChain.cpp  SwapChain.hpp  Texture.cpp  Texture.hpp  Window.cpp
src/models/: basicM.mtl
src/shaders/: LightningPassDeffered.frag  LightningPassDeffered.frag.spv  gBuffer.frag  gBuffer.frag.spv  point_light.frag  shadow.frag  (+10 more)
(+111 files in other folders)
